<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_add_task"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:shortcutShortLabel="@string/shortcut_add_task_short"
        android:shortcutLongLabel="@string/shortcut_add_task_long">
        <intent
            android:action="com.team7.taskflow.action.SHORTCUT_ADD_TASK"
            android:targetPackage="com.team7.taskflow"
            android:targetClass="com.team7.taskflow.ui.system.ShortcutRouterActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_view_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:shortcutShortLabel="@string/shortcut_view_calendar_short"
        android:shortcutLongLabel="@string/shortcut_view_calendar_long">
        <intent
            android:action="com.team7.taskflow.action.SHORTCUT_VIEW_CALENDAR"
            android:targetPackage="com.team7.taskflow"
            android:targetClass="com.team7.taskflow.ui.system.ShortcutRouterActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.team7.taskflow.action.SHORTCUT_SEARCH"
            android:targetPackage="com.team7.taskflow"
            android:targetClass="com.team7.taskflow.ui.system.ShortcutRouterActivity" />
    </shortcut>
</shortcuts>
